[package]
name = "array_par_map"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provides a trait for mapping values in an array in paralell using rayon"
repository = "https://github.com/sigurd4/array_par_map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"